--- a/public/index.html
+++ b/public/index.html
@@ -12,17 +12,17 @@
   <meta name="description" content="Self Developed personal website build with React.js">
 
   <!-- Google / Search Engine Tags -->
-  <meta itemprop="name" content="S0umyajit | Portfolio">
+  <meta itemprop="name" content="Aryan kumar | Portfolio">
   <meta itemprop="description" content="Self Developed personal website build with React.js">
 
   <meta property="og:type" content="website">
-  <meta property="og:title" content="S0umyajit | Portfolio">
+  <meta property="og:title" content="Aryan kumar | Portfolio">
   <meta property="og:description" content="Self Developed personal website build with React.js">
  
 
   <!-- Twitter Meta Tags -->
   <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:title" content="S0umyajit | Portfolio">
+  <meta name="twitter:title" content="Aryan kumar | Portfolio">
   <meta name="twitter:description" content="Self Developed personal website build with React.js">
 
 </head>
